<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:strokeWidth="0dp"
    app:strokeColor="@color/newsDescriptionColorCollapsed"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivOptionItem"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvOptionTitle"
        app:layout_constraintBottom_toBottomOf="@id/tvOptionTitle"
        tools:src="@drawable/baseline_format_size_24"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvOptionTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonGroup"
        app:layout_constraintRight_toLeftOf="@id/ivOptionItemExpand"
        app:layout_constraintLeft_toRightOf="@id/ivOptionItem"
        android:text="@string/text_size"
        android:fontFamily="@font/poppins_bold"
        />
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivOptionItemExpand"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvOptionTitle"
        app:layout_constraintBottom_toBottomOf="@id/tvOptionTitle"
        android:src="@drawable/baseline_expand_more_24"
        />
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivOptionItemCollapse"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvOptionTitle"
        app:layout_constraintBottom_toBottomOf="@id/tvOptionTitle"
        android:src="@drawable/baseline_keyboard_arrow_up_24"
        />

    <LinearLayout
        android:id="@+id/buttonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOptionTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sampleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOptionTitle"
            app:layout_constraintBottom_toTopOf="@id/buttonGroup"
            android:text="@string/text_size_sample"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:id="@+id/btnSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:text="@string/small"
        android:fontFamily="@font/poppins_regular"
        app:strokeWidth="0dp"
        app:rippleColor="#00FFFFFF"
        android:textColor="@color/scarletRed"
        app:strokeColor="@color/scarletRed"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:id="@+id/btnMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:text="@string/medium"
        android:fontFamily="@font/poppins_regular"
        app:rippleColor="#00FFFFFF"
        android:textColor="@color/scarletRed"
        app:strokeColor="@color/scarletRed"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:id="@+id/btnLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:text="@string/large"
        android:fontFamily="@font/poppins_regular"
        app:strokeWidth="0dp"
        app:rippleColor="#00FFFFFF"
        android:textColor="@color/scarletRed"
        app:strokeColor="@color/scarletRed"
        />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>