<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="20dp"
    >

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/articleImage"
       app:shapeAppearanceOverlay="@style/roundedCornersShapeableImageView"
        android:layout_width="120dp"
        android:layout_height="110dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/article_placeholder_image"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/separatorLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/separator_line_vertical"
        app:layout_constraintLeft_toRightOf="@id/articleImage"
        app:layout_constraintRight_toLeftOf="@id/articleHeadline"
        app:layout_constraintTop_toTopOf="parent"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/articleHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="11"
        android:fontFamily="@font/poppins_bold"
        android:maxLines="2"
        android:text="@string/sample_news_headline"
        app:layout_constraintStart_toEndOf="@id/separatorLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/articleDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="11"
        android:fontFamily="@font/poppins_regular"
        android:maxLines="2"
        android:text="@string/sample_news_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/separatorLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/articleHeadline"
        app:layout_constraintVertical_bias=".1"

        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/articlePublishedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/sample_news_published_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/articleImage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias=".1"
        app:layout_constraintTop_toBottomOf="@id/articleDescription"
         />
</androidx.constraintlayout.widget.ConstraintLayout>